--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">Skripsol</string>
+    <declare-styleable name="CustomButton">
+        <attr name="buttonText" format="string" />
+        <attr name="buttonTextColor" format="color" />
+        <attr name="buttonBackgroundColor" format="color" />
+        <attr name="buttonCornerRadius" format="dimension" />
+        <!-- Add other props here -->
+    </declare-styleable>
 </resources>
