--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Skripsol</string>
+    <string name="app_name">JTI-SKRIPSOL</string>
     <declare-styleable name="CustomButton">
         <attr name="buttonText" format="string" />
         <attr name="buttonTextColor" format="color" />
